--- a/ExampleMongoDB/ExampleMongoDB/ExampleMongoDB.csproj
+++ b/ExampleMongoDB/ExampleMongoDB/ExampleMongoDB.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <StartupObject>ExampleMongoDB.Handle</StartupObject>
+    <StartupObject>ExampleMongoDB.HandleExternalClass</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
