--- a/ExampleMongoDB/Src/Brspontes.Domain.Service/Brspontes.Domain.Service.Mongo.csproj
+++ b/ExampleMongoDB/Src/Brspontes.Domain.Service/Brspontes.Domain.Service.Mongo.csproj
@@ -1,7 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="HeroesContext\AutoMapper\" />
+    <Folder Include="HeroesContext\Commands\Outputs\" />
+    <Folder Include="HeroesContext\Handle\" />
+    <Folder Include="HeroesContext\QueriesResults\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FluentValidator" Version="2.0.4" />
+    <PackageReference Include="MongoDB.Driver" Version="2.8.1" />
+  </ItemGroup>
 
 </Project>
