--- a/ExampleMongoDB/Src/Brspontes.Infra.Mongo/Brspontes.Infra.Mongo.csproj
+++ b/ExampleMongoDB/Src/Brspontes.Infra.Mongo/Brspontes.Infra.Mongo.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="MongoContext\" />
+    <Folder Include="Repository\" />
+  </ItemGroup>
+
 </Project>
