--- a/ExampleMongoDB/Src/Brspontes.Domain.Service/Brspontes.Domain.Service.Mongo.csproj
+++ b/ExampleMongoDB/Src/Brspontes.Domain.Service/Brspontes.Domain.Service.Mongo.csproj
@@ -5,10 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="HeroesContext\AutoMapper\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="8.1.1" />
     <PackageReference Include="FluentValidator" Version="2.0.4" />
     <PackageReference Include="MongoDB.Driver" Version="2.8.1" />
   </ItemGroup>
